сделал REST контроллер с методами обновления данных и возврата отчета в .docx